Fix visibility of dropdown/pop-menu parent items

--- a/themes/Flat-Remix-Grey-Dark/gnome-shell/gnome-shell.css
+++ b/themes/Flat-Remix-Grey-Dark/gnome-shell/gnome-shell.css
@@ -392,11 +392,11 @@ StScrollBar {
     .popup-menu-item:focus:active, .popup-menu-item:hover:active {
       background-color: #343845 !important; }
   .popup-menu-item:checked {
-    background-color: #3b3f4e !important; }
-  .popup-menu-item:checked {
     margin-bottom: 0;
     box-shadow: inset 0 -1px 0 0 #303340;
-    border-radius: 8px 8px 0 0; }
+    border-radius: 8px 8px 0 0;
+    color: #fcfcfc !important;
+    background-color: #3b3f4e !important; }
     .popup-menu-item:checked:focus, .popup-menu-item:checked:hover {
       background-color: #414657 !important; }
     .popup-menu-item:checked:active {
