--- a/themes/Flat-Remix-Red-Darkest/gnome-shell/gnome-shell.css
+++ b/themes/Flat-Remix-Red-Darkest/gnome-shell/gnome-shell.css
@@ -392,11 +392,11 @@ StScrollBar {
     .popup-menu-item:focus:active, .popup-menu-item:hover:active {
       background-color: #141414 !important; }
   .popup-menu-item:checked {
-    background-color: #1c1c1c !important; }
-  .popup-menu-item:checked {
     margin-bottom: 0;
-    box-shadow: inset 0 -1px 0 0 #0f0f0f;
-    border-radius: 8px 8px 0 0; }
+    box-shadow: inset 0 -1px 0 0 #303340;
+    border-radius: 8px 8px 0 0;
+    color: #fcfcfc !important;
+    background-color: #1c1c1c !important; }
     .popup-menu-item:checked:focus, .popup-menu-item:checked:hover {
       background-color: #242424 !important; }
     .popup-menu-item:checked:active {
